Explain memory and load balancing in Tomcat